src/test/c/reject/05-negativeTempo.msh
score myScore {
    {
        tempo -10;
        signature 4/4;
        piano {
            clef clefG;
            tabs {
                c(q) d(q) e(q) f(q) | g(q) a(q) b(q) c(q)
            }
        }
	}
}
